kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: openarabic
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: #{API_TAG}#
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 250Mi
              cpu: 50m
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            periodSeconds: 10
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 30
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
              add: ["MKNOD", "CHOWN", "NET_RAW", "NET_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: openarabic
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    app: api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: openarabic
spec:
  routes:
    - kind: Rule
      match: Host(`api.openarabic.io`)
      services:
        - kind: Service
          name: api
          namespace: openarabic
          passHostHeader: true
          responseForwarding:
            flushInterval: 1ms
          port: 5001
